--- a/ridefarecomparison/templates/home.html
+++ b/ridefarecomparison/templates/home.html
@@ -1,5 +1,7 @@
-<body>
-  <h1>
-    {{ message }}
-  </h1>
-</body>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>
+  {{ message }}
+</h1>
+{% endblock %}
