--- a/ridefarecomparison/templates/base.html
+++ b/ridefarecomparison/templates/base.html
@@ -1,7 +1,9 @@
 {% load staticfiles %}
 
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  </script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
   {% block content %}
