--- a/ridefarecomparison/templates/home.html
+++ b/ridefarecomparison/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -10,7 +11,9 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <link type="text/css" rel="stylesheet" href="static/styles/home.css">
+    {% block stylesheet %}
+      <link rel="stylesheet" type="text/css" href="{% static '/styles/home.css' %}" />
+    {% endblock %}
   </head>
 
   <body>
