Seperates lat/long

--- a/ridefarecomparison/templates/results.html
+++ b/ridefarecomparison/templates/results.html
@@ -8,8 +8,8 @@
 <br>
 {{ dropoff }}
 <br>
-{{ geo_pickup }}
+{{ pickup_lat }},{{ pickup_long }}
 <br>
-{{ geo_dropoff }}
+{{ dropoff_lat}},{{ dropoff_long}}
 
 {% endblock %}
