Trying to get uber prices

--- a/ridefarecomparison/templates/results.html
+++ b/ridefarecomparison/templates/results.html
@@ -4,12 +4,6 @@
 
 {% block content %}
 
-{{ pickup }}
-<br>
-{{ dropoff }}
-<br>
-{{ pickup_lat }},{{ pickup_long }}
-<br>
-{{ dropoff_lat}},{{ dropoff_long}}
+{{ uber_prices }}
 
 {% endblock %}
