Got lyft working. Need to convert units

--- a/ridefarecomparison/templates/results.html
+++ b/ridefarecomparison/templates/results.html
@@ -14,4 +14,14 @@
   </div>
 {% endfor %}
 
+{% for entry in lyft_prices %}
+  <div class="lyft">
+    {% for key, value in entry.items %}
+      <div class="col-sm-4">
+        {{ key }} - {{ value }}
+      </div>
+    {% endfor %}
+  </div>
+{% endfor %}
+
 {% endblock %}
