Formatting into bootstrap columns

--- a/ridefarecomparison/templates/home.html
+++ b/ridefarecomparison/templates/home.html
@@ -27,7 +27,7 @@
       </label>
     </body>
 
-    <button type="button" class="btn btn-success" onclick="Submit();">Submit Location</button>
+    <button type="button" class="btn btn-success" onclick="submit();">Submit Location</button>
 </form>
 
 <script src="{% static '/scripts/home.js' %}"></script>
